# ride-platform

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLATION.md  LICENSE  README.md  setup.sh
cars/testcar/: myconfig.py
cars/testcar/data/: catalog_0.catalog  catalog_0.catalog_manifest  catalog_1.catalog  catalog_1.catalog_manifest  catalog_2.catalog  catalog_2.catalog_manifest  manifest.json
cars/testcar2/: myconfig.py
cars/testcar2/data/: catalog_0.catalog  catalog_0.catalog_manifest  catalog_1.catalog  catalog_1.catalog_manifest  manifest.json
cpm_lab/middleware/: CMakeLists.txt
donkeycar_bridge/: README.md  launch.sh  launch_sim.sh  run_physical_car.py  run_simulation.sh  setup.py
donkeycar_bridge/donkeycar_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
donkeycar_bridge/examples/: circle_controller.py  figure_eight_controller.py
donkeycar_bridge/lcc_integration/: CMakeLists.txt  DonkeycarCameraAggregator.cpp  DonkeycarCameraAggregator.hpp  DonkeycarCameraViewer.qml  DonkeycarImageProvider.cpp  DonkeycarImageProvider.hpp  DonkeycarPluginFactory.cpp  DonkeycarPluginFactory.hpp
donkeycar_bridge/lcc_integration/test/: main.qml  resources.qrc  test_camera_viewer.cpp
donkeycar_bridge/simulation/: bridge.py  config.py  controller.py
donkeycar_bridge/src/: cpm_py.py  dds_bridge.py  network_controller.py  parameter_config.py  physical_car_bridge.py  vehicle_adapter.py  visualizer.py
